// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`video Basic renders as expected 1`] = `
<div
  className="relative"
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
>
  <button
    className="bg-darken75 round absolute cursor-pointer z1"
    onClick={[Function]}
    style={
      Object {
        "height": "36%",
        "left": "50%",
        "padding": "4% 9% 1%",
        "top": "50%",
        "transform": "translate(-50%, -50%)",
        "width": "30%",
      }
    }
  >
    <svg
      aria-labelledby="play-icon-title"
      fill="#fff"
      focusable="false"
      role="img"
      viewBox="0 0 20 20"
      width="100%"
    >
      <title
        id="play-icon-title"
      >
        Play
      </title>
      <polygon
        points="1,0 20,10 1,20"
      />
    </svg>
  </button>
  <video
    autoPlay={true}
    className="block mx-auto"
    loop={true}
    muted={true}
    onEnded={[Function]}
    onPause={[Function]}
    onPlay={[Function]}
    src="../files/browser-example.mp4"
    title="A video!"
    type="video/mp4"
    width="100%"
  >
    <p>
      Your browser doesn't support HTML5 video. Open
       
      <a
        href="../files/browser-example.mp4"
      >
        link to the video
      </a>
      .
    </p>
  </video>
</div>
`;

exports[`video Reduced motion renders as expected 1`] = `
<div
  className="relative"
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
>
  <button
    className="bg-darken75 round absolute cursor-pointer z1"
    onClick={[Function]}
    style={
      Object {
        "height": "36%",
        "left": "50%",
        "padding": "4% 9% 1%",
        "top": "50%",
        "transform": "translate(-50%, -50%)",
        "width": "30%",
      }
    }
  >
    <svg
      aria-labelledby="play-icon-title"
      fill="#fff"
      focusable="false"
      role="img"
      viewBox="0 0 20 20"
      width="100%"
    >
      <title
        id="play-icon-title"
      >
        Play
      </title>
      <polygon
        points="1,0 20,10 1,20"
      />
    </svg>
  </button>
  <video
    className="block mx-auto"
    muted={true}
    onEnded={[Function]}
    onPause={[Function]}
    onPlay={[Function]}
    src="../files/browser-example.mp4"
    title="A video!"
    type="video/mp4"
    width="100%"
  >
    <p>
      Your browser doesn't support HTML5 video. Open
       
      <a
        href="../files/browser-example.mp4"
      >
        link to the video
      </a>
      .
    </p>
  </video>
</div>
`;
